<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bookstore</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_book_details">Book details</string>
    <string name="title_activity_book_add">Add new book</string>
    <string name="action_insert">Add new</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="price">Price in EUR</string>
    <string name="description">Book description</string>
    <string name="save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

</resources>